--- a/JavaScript/[코딩 자율학습] Html+Css+JavaScript/셀프 체크/3장/index3_1.html
+++ b/JavaScript/[코딩 자율학습] Html+Css+JavaScript/셀프 체크/3장/index3_1.html
@@ -4,15 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3.1 self-check</title>
+    <style>
+        div{
+            text-align: center;
+            width: 300px;
+            height:300px;
+            background-color:rgb(252, 252, 20);
+            border: 1px solid black;
+            padding: 5px;
+            box-sizing: border-box;
+            margin : 0 auto;
+        }
+    </style>
 </head>
 <body>
-    <div style = "text-align: center;">
-        <h3>To. 남편</h3>
+    <div>
+        <h2>To. 남편</h2>
         <p>
             여보~ 오늘 급하게 먼저 출근해야해서<br>
-            인사도 못하고 먼저 나가요~<br><br>
+            인사도 못하고 먼저 나가요~
+        </p>
+        <p>
             아침 굶지 말고 냉장고에 있는 반찬<br>
-            전자레이지에 데워서 챙겨먹고 나가요~!<br><br>
+            전자레이지에 데워서 챙겨먹고 나가요~!
+        </p>
+        <p>
             그럼 오늘 하루도 힘내고 이따 저녁에 봐요~<br>
             화이팅~!
         </p>
