--- a/JavaScript/[코딩 자율학습] Html+Css+JavaScript/셀프 체크/6장/transition_index.html
+++ b/JavaScript/[코딩 자율학습] Html+Css+JavaScript/셀프 체크/6장/transition_index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <style>
         .container .bar{
+            white-space: nowrap;
+            display:block;
             width:10px;
             margin:10px;
             transition-property: width;
