--- a/JavaScript/My_Projects/JAVA_PROJECT_MemeMaker/index.html
+++ b/JavaScript/My_Projects/JAVA_PROJECT_MemeMaker/index.html
@@ -8,6 +8,45 @@
 </head>
 <body>
     <canvas></canvas>
+    <input id = "line-width" type = "range" min = "1" max = "10"
+    value = "5" />
+    <div>
+        <input type = "color" id = "color" />
+    <div class = "color-option" 
+        style = "background-color:#111111"
+        data-color="#111111">
+    </div>
+    <div class = "color-option" 
+        style = "background-color:#ff4d4d"
+        data-color="#ff4d4d">
+    </div>
+    <div class = "color-option" 
+        style = "background-color:#ffaf40"
+        data-color="#ffaf40">
+    </div>
+    <div class = "color-option" 
+        style = "background-color:#fffa65"
+        data-color="#fffa65">
+    </div>
+    <div class = "color-option" 
+        style = "background-color:#32ff7e"
+        data-color="#32ff7e">
+    </div>
+    <div class = "color-option" 
+        style = "background-color:#18dcff"
+        data-color="#18dcff">
+    </div>
+    <div class = "color-option" 
+        style = "background-color:#7d5fff"
+        data-color="#7d5fff">
+    </div>
+    <div class = "color-option" 
+        style = "background-color:#cd84f1"
+        data-color="#cd84f1">
+    </div>
+    </div>
+    <button id = "mode-btn">Fill</button>
+    <button id = "eraser-btn">Eraser</button>
     <script src = "app.js"></script>
 </body>
 </html>
