--- a/JavaScript/My_Projects/JAVA_PROJECT_MemeMaker/index.html
+++ b/JavaScript/My_Projects/JAVA_PROJECT_MemeMaker/index.html
@@ -7,46 +7,55 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <canvas></canvas>
-    <input id = "line-width" type = "range" min = "1" max = "10"
-    value = "5" />
-    <div>
+    <div class = "color-options">
         <input type = "color" id = "color" />
-    <div class = "color-option" 
-        style = "background-color:#111111"
-        data-color="#111111">
+        <div class = "color-option" 
+            style = "background-color:#111111"
+            data-color="#111111">
+        </div>
+        <div class = "color-option" 
+            style = "background-color:#ff4d4d"
+            data-color="#ff4d4d">
+        </div>
+        <div class = "color-option" 
+            style = "background-color:#ffaf40"
+            data-color="#ffaf40">
+        </div>
+        <div class = "color-option" 
+            style = "background-color:#fffa65"
+            data-color="#fffa65">
+        </div>
+        <div class = "color-option" 
+            style = "background-color:#32ff7e"
+            data-color="#32ff7e">
+        </div>
+        <div class = "color-option" 
+            style = "background-color:#18dcff"
+            data-color="#18dcff">
+        </div>
+        <div class = "color-option" 
+            style = "background-color:#7d5fff"
+            data-color="#7d5fff">
+        </div>
+        <div class = "color-option" 
+            style = "background-color:#cd84f1"
+            data-color="#cd84f1">
+        </div>
     </div>
-    <div class = "color-option" 
-        style = "background-color:#ff4d4d"
-        data-color="#ff4d4d">
+    <canvas></canvas>
+    <div class = "btns">
+        <input id = "line-width" type = "range" min = "1" max = "10"
+        value = "1" />
+        <button id = "mode-btn">💧Fill</button>
+        <button id = "reset-btn">🈚 Reset</button>
+        <button id = "eraser-btn">❎ Erase</button>
+        <label for = "file">
+            🖼️ Add Photo
+            <input type = "file" accept = "image/*" id = "file">
+        </label>
+        <input type = "text" placeholder = "Add text here..." id = "text">
+        <button id = "save">📷 Save</button>
     </div>
-    <div class = "color-option" 
-        style = "background-color:#ffaf40"
-        data-color="#ffaf40">
-    </div>
-    <div class = "color-option" 
-        style = "background-color:#fffa65"
-        data-color="#fffa65">
-    </div>
-    <div class = "color-option" 
-        style = "background-color:#32ff7e"
-        data-color="#32ff7e">
-    </div>
-    <div class = "color-option" 
-        style = "background-color:#18dcff"
-        data-color="#18dcff">
-    </div>
-    <div class = "color-option" 
-        style = "background-color:#7d5fff"
-        data-color="#7d5fff">
-    </div>
-    <div class = "color-option" 
-        style = "background-color:#cd84f1"
-        data-color="#cd84f1">
-    </div>
-    </div>
-    <button id = "mode-btn">Fill</button>
-    <button id = "eraser-btn">Eraser</button>
     <script src = "app.js"></script>
 </body>
 </html>
