--- a/JavaScript/[코딩 자율학습] Html+Css+JavaScript/Final_Project/index.html
+++ b/JavaScript/[코딩 자율학습] Html+Css+JavaScript/Final_Project/index.html
@@ -79,38 +79,47 @@
     <!--start_section:What I Do-->
     <section id="features" class="do">
         <div class="container">
-          <div class="title">
-            <h4>Features</h4>
-            <h2>What I Do</h2>
-          </div>
-          <div class="do-me">                
-            <div class="do-inner">
-              <div class="icon">
-                <i class="fa-brands fa-html5"></i>
-              </div>
-              <div class="content">
-                <h3>HTML5</h3>
-                <p>HTML5 Study</p>
-              </div>
-            </div>        
-            <div class="do-inner">
-              <div class="icon">
-                <i class="fa-brands fa-css3-alt"></i>        
-              </div>
-              <div class="content">
-                <h3>CSS3</h3>
-                <p>CSS3 Study</p>
-              </div>
+            <div class="title">
+                <h4>Features</h4>
+                <h2>What I Do</h2>
             </div>
-            <div class="do-inner">
-              <div class="icon">
-                <i class="fa-brands fa-js"></i>
-              </div>
-              <div class="content">
-                <h3>JavaScript</h3>
-                <p>JavaScript Study</p>
-              </div>
-            </div>
+            <div class="do-me">                
+                <div class="do-inner">
+                    <div class="icon">
+                        <i class="fa-brands fa-html5"></i>
+                    </div>
+                    <div class="content">
+                        <h3>HTML5</h3>
+                        <p>HTML5 Study</p>
+                    </div>
+                </div>        
+                <div class="do-inner">
+                    <div class="icon">
+                        <i class="fa-brands fa-css3-alt"></i>        
+                    </div>
+                <div class="content">
+                        <h3>CSS3</h3>
+                        <p>CSS3 Study</p>
+                </div>
+                </div>
+                <div class="do-inner">
+                    <div class="icon">
+                        <i class="fa-brands fa-js"></i>
+                    </div>
+                <div class="content">
+                        <h3>JavaScript</h3>
+                        <p>JavaScript Study</p>
+                </div>
+                </div>
+                <div class = "do-inner">
+                    <div class = "icon">
+                        <i class="fa-brands fa-vuejs"></i>
+                    </div>
+                    <div class = "content">
+                        <h3>Vue.Js</h3>
+                        <p>Vue.Js Study</p>
+                    </div>
+                </div>
           </div>
         </div>  
       </section>
