--- a/JavaScript/[코딩 자율학습] Html+Css+JavaScript/Final_Project/index.html
+++ b/JavaScript/[코딩 자율학습] Html+Css+JavaScript/Final_Project/index.html
@@ -61,13 +61,13 @@
                     <p>Although it is an embarrassing skill to call myself a developer now,<br>
                     I am confident that I will grow through constant study.</p>
                     <div class = "social">
-                        <a href = "https://www.facebook.com/profile.php?id=100011401007799&locale=ko_KR">
+                        <a href = "https://www.facebook.com/profile.php?id=100011401007799&locale=ko_KR" target = "_blank">
                             <i class = "fa-brands fa-facebook"></i>
                         </a>
-                        <a href = "https://www.instagram.com/woooo_g1020/">
+                        <a href = "https://www.instagram.com/woooo_g1020/" target = "_blank">
                             <i class = "fa-brands fa-instagram"></i>
                         </a>
-                        <a href = "https://www.youtube.com/channel/UCCMx6cHvlwlVghOUF5QbGvw">
+                        <a href = "https://www.youtube.com/channel/UCCMx6cHvlwlVghOUF5QbGvw" target = "_blank">
                             <i class = "fa-brands fa-youtube"></i>
                         </a>
                     </div>
@@ -118,6 +118,15 @@
                     <div class = "content">
                         <h3>Vue.Js</h3>
                         <p>Vue.Js Study</p>
+                    </div>
+                </div>
+                <div class = "do-inner">
+                    <div class = "icon">
+                        <i class="fa-brands fa-bootstrap"></i>
+                    </div>
+                    <div class = "content">
+                        <h3>Bootstrap</h3>
+                        <p>Bootstrap Study Study</p>
                     </div>
                 </div>
           </div>
