--- a/JavaScript/My_Projects/JAVA_PROJECT_MyChromeWeb/index.html
+++ b/JavaScript/My_Projects/JAVA_PROJECT_MyChromeWeb/index.html
@@ -3,11 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Chrome Web</title>
-    <link rel="stylesheet" href="style.css">
+    <title>MY Chrome Web</title>
+    <link rel = "stylesheet" href = "CSS/style.css">
 </head>
 <body>
-    <h1 id = "title" class = "ti">Grab Me!</h1>
-    <script src="app.js"></script>
+    <form id="login-form" class = "hidden">
+        <input required 
+        maxlength="15" 
+        type="text" 
+        placeholder="What is your name?">
+        <input type="submit" value="Log In">
+    </form>
+    <h2 id = clock class="hidden">00:00:00</h2>
+    <h1 id = greeting class="hidden"></h1>  
+    <form id="todo-form">
+        <input type="text" placeholder="Write a To Do and Press Enter" required>
+    </form>
+    <ul id="todo-list"></ul>
+    <button id="remove-user">REMOVE</button>
+    <div id="quote">
+        <span></span>
+        <span></span>
+    </div>
+    <script src = "JS/greeting.js"></script>    
+    <script src="JS/clock.js"></script>
+    <script src="JS/quote.js"></script>
+    <script src="JS/background.js"></script>
+    <script src="JS/todo.js"></script>
 </body>
-</html>
+</html>    
