--- a/JavaScript/My_Projects/JAVA_PROJECT_MyChromeWeb/index.html
+++ b/JavaScript/My_Projects/JAVA_PROJECT_MyChromeWeb/index.html
@@ -14,7 +14,7 @@
         placeholder="What is your name?">
         <input type="submit" value="Log In">
     </form>
-    <h2 id = clock class="hidden">00:00:00</h2>
+    <h2 id = clock class = "hidden">00:00:00</h2>
     <h1 id = greeting class="hidden"></h1>  
     <form id="todo-form">
         <input type="text" placeholder="Write a To Do and Press Enter" required>
@@ -25,10 +25,15 @@
         <span></span>
         <span></span>
     </div>
-    <script src = "JS/greeting.js"></script>    
+    <div id="weather">
+        <span></span>
+        <span></span>
+    </div>
+    <script src="JS/greeting.js"></script>    
     <script src="JS/clock.js"></script>
     <script src="JS/quote.js"></script>
     <script src="JS/background.js"></script>
     <script src="JS/todo.js"></script>
+    <script src="JS/weather.js"></script>
 </body>
 </html>    
