--- a/JavaScript/LocalStorage_Test/index.html
+++ b/JavaScript/LocalStorage_Test/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Storage_Test</title>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <div class = "main">
-            <input id = "id" type = "text">
-            <input id = "password" type = "password">
-            <button id = "loginbutton">Login</button>
-            <div id = "userId"></div>
-            <div id = "userPwd"></div>
-        </div>
-        <script src = "./index.js"></script>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>localStorage Prc</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="main">
+        <form action="#">
+            <input type="text" name="id" id="id">
+            <input type="password" id="pwd">
+            <input type="submit" value="LogIn" id = "submit">
+        </form>
+        <div class="userId"></div>
+        <div class="userPwd"></div>
+    </div>
+    <script src="index.js"></script>
+</body>
 </html>
