--- a/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_MapleStory_LoginForm/index.html
+++ b/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_MapleStory_LoginForm/index.html
@@ -14,7 +14,9 @@
                 <i class="fa-solid fa-bars"></i>
                 <i class="fa-solid fa-house"></i>
             </div>
-            <img src="img/MapleStory_logo.png" alt="logo">
+            <a href="https://maplestory.nexon.com/Home/Main">
+                <img src="img/MapleStory_logo.png" alt="logo">
+            </a>
         </header>
 
         <div class="login-container">
