--- a/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Snow/index.html
+++ b/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Snow/index.html
@@ -8,20 +8,6 @@
 </head>
 <body>
     <div class = "snow"></div>
-    <script>
-        function createSnow(){
-            const el = document.createElement("div");
-            el.classList.add('snow');
-            el.style.marginLeft = randomPositon() + 'px';
-            document.body.appendChild(el);
-        }
-        function randomPositon(){
-            return Math.floor(Math.random() * window.innerWidth);
-        }
-        
-        for(let i = 0; i < 1000; i++){
-            createSnow();
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
