--- a/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Card_UI_Design/index.html
+++ b/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Card_UI_Design/index.html
@@ -12,6 +12,10 @@
 </head>
 <body>
     <div class="container">
+        <div class="toggle-container">
+            <label for="toggle" class = "toggle-btn"></label>
+            <input type="checkbox" name="toggle" id="toggle">
+        </div>
         <div class="card">
             <div class="profile-img">
                 <img src="img/profile.jpg">
