--- a/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Smartphone_Store/index.html
+++ b/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Smartphone_Store/index.html
@@ -19,7 +19,9 @@
       <a href="#">About</a>
     </div>
     <div class="sign">
-      <button class="signup">가입</button>
+      <a href="http://127.0.0.1:5500/FE_PROJECT_Smartphone_Store/singup.html">
+        <button class="signup">가입</button>
+      </a>  
       <button class="login">로그인</button>
     </div>
   </nav>
