add login-page, signup-page, etc..

--- a/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Smartphone_Store/index.html
+++ b/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Smartphone_Store/index.html
@@ -180,5 +180,6 @@
       <p>Copyright © 2024 COGITech. All Rights Reserved.</p>
     </div>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
