--- a/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Smartphone_Store/login.html
+++ b/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Smartphone_Store/login.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>COGI Device Store Sign UP</title>
+  <title>COGI Device Store Login</title>
   <script src="https://kit.fontawesome.com/f284e76b1d.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./signup/style.css">
+  <link rel="stylesheet" href="./login/style.css">
   <link 
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap" 
     rel="stylesheet">
@@ -14,7 +14,7 @@
   <div class="signup-container">
 
     <div class="logo-container">
-      <h1>Sign Up</h1>
+      <h1>Login</h1>
       <div class="line"></div>
     </div>
 
@@ -31,33 +31,15 @@
         <input type="password" id="pw" placeholder="비밀번호를 입력하세요" autocomplete="off">
         <i class="fa-solid"></i>
       </div>
-      
-      <div class="email-container">
-        <label for="email">E-mail</label>
-        <input type="email" id="email" placeholder="이메일을 입력하세요" autocomplete="off">
-        <i class="fa-solid"></i>
-      </div>
-
-      <div class="phone-container">
-        <label for="phone">Phone</label>
-        <input type="text" id="phone" placeholder="번호를 입력하세요" autocomplete="off">
-        <i class="fa-solid"></i>
-      </div>
-
-      <div class="nick-container">
-        <label for="nick">Nickname</label>
-        <input type="text" id="nick" placeholder="닉네임을 입력하세요" autocomplete="off">
-        <i class="fa-solid"></i>
-      </div>
 
       <div class="btn-container">
         <a href="#">
-          <button id="submit-btn">Sign Up!</button>
+          <button id="login-btn">Login!</button>
         </a>
       </div>
 
     </form>
   </div>
-  <script src="./signup/script.js"></script>
+  <script src="./login/script.js"></script>
 </body>
 </html>
