--- a/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Weather_APP_RE/index.html
+++ b/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Weather_APP_RE/index.html
@@ -9,17 +9,22 @@
 </head>
 <body>
     <div class="weather-container">
-        
+
         <div class="search-box">
             <i class="fa-solid fa-location-dot"></i>
             <input type="text" placeholder="도시를 입력하세요.">
             <button class="fa-solid fa-magnifying-glass-location"></button>
         </div>
 
+        <div class="error-box">
+            <h1>404</h1>
+            <p class="error">[ERROR] 404 Not Found</p>
+        </div>
+
         <div class="detail-box">
             <img src="">
             <div class="weather-detail">
-                <p class="weather-name"></p>
+                <h1 class="weather-name"></h1>
                 <div class="text">
                     <p class="temp-max"></p>
                     <p class="temp-current"></p>
@@ -33,7 +38,7 @@
             <div class="humidity">
                 <i class="fa-solid fa-water"></i>
                 <div class="text">
-                    <span></span>
+                    <span>10 %</span>
                     <p>Humidity</p>
                 </div>
             </div>
@@ -41,7 +46,7 @@
             <div class="wind">
                 <i class="fa-solid fa-wind"></i>
                 <div class="text">
-                    <span></span>
+                    <span>1 m/s</span>
                     <p>Wind</p>
                 </div>
             </div>
@@ -49,7 +54,7 @@
             <div class="sunrise">
                 <i class="fa-solid fa-sun"></i>
                 <div class="text">
-                    <span></span>
+                    <span>00:00</span>
                     <p>Sunrise</p>
                 </div>
             </div>
@@ -57,7 +62,7 @@
             <div class="sunset">
                 <i class="fa-solid fa-moon"></i>
                 <div class="text">
-                    <span></span>
+                    <span>00:00</span>
                     <p>Sunset</p>
                 </div>
             </div>
