--- a/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Smartphone_Store/index.html
+++ b/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_Smartphone_Store/index.html
@@ -22,7 +22,9 @@
       <a href="http://127.0.0.1:5500/FE_PROJECT_Smartphone_Store/singup.html">
         <button class="signup">가입</button>
       </a>  
-      <button class="login">로그인</button>
+      <a href="http://127.0.0.1:5500/FE_PROJECT_Smartphone_Store/login.html">
+        <button class="login">로그인</button>
+      </a>
     </div>
   </nav>
 
