20240221 News Viewer_COGI

--- a/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_News_Viewer/index.html
+++ b/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_PROJECT_News_Viewer/index.html
@@ -31,17 +31,9 @@
           <button class="search-btn">검색</button>
         </div>
 
-        <div class="new-viewer">
-          <div class="card">
-            <img src="https://i.namu.wiki/i/nsVkQr01yltES_xOP7kF-rNhRvSQwGEQJ08Xzaj6btA4yEOC4w-r5F1uH1l3wwoPQOgUGbtV1FlH0UE8Ou2alg.webp">
-            <div class="news-article">
-              <h2>경제는 차갑다</h2>
-              <p>Lorem ipsum dolor sit amet.
-              Corporis aut eaque nam alias!</p>
-            </div>
-            <button class="url-btn">바로 가기</button>
-          </div>
+        <div class="news-viewer">
         </div>
+
       </section>
     </main>
   </div>
