--- a/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_Minimal_Login_Form/index.html
+++ b/Front-End-Prc/HTML+CSS+JS/My_Projects/FE_Minimal_Login_Form/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/f284e76b1d.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
   <div class="main-container">
 
@@ -18,29 +20,25 @@
 
       <div class="id-container">
         <label for="id">ID</label>
-        <input type="text" id="id" placeholder="Enter Your ID"
-        autocomplete="off" required>
+        <input type="text" id="id" placeholder="Enter Your ID" autocomplete="off" required>
         <i class="fa-solid fa-check"></i>
       </div>
 
       <div class="pw-container">
         <label for="pw">Password</label>
-        <input type="password" id="pw" placeholder="Enter Your PW" maxlength="10"
-        required>
+        <input type="password" id="pw" placeholder="Enter Your PW" maxlength="10" required>
         <i class="fa-solid fa-check"></i>
       </div>
 
       <div class="email-container">
         <label for="email">Email</label>
-        <input type="email" id="email" placeholder="Enter Your Email"
-        autocomplete="off" required>
+        <input type="email" id="email" placeholder="Enter Your Email" autocomplete="off" required>
         <i class="fa-solid fa-check"></i>
       </div>
 
       <div class="phone-container">
         <label for="id">Phone</label>
-        <input type="text" id="phone" placeholder="Enter Your Phone without ' - '"
-        autocomplete="off" required>
+        <input type="text" id="phone" placeholder="Enter Your Phone without ' - '" autocomplete="off" required>
         <i class="fa-solid fa-check"></i>
       </div>
 
@@ -51,4 +49,5 @@
   </div>
   <script src="script.js"></script>
 </body>
+
 </html>
