--- a/Front-End-Prc/HTML+CSS+JS/JS_Study/JS_Prc/Airline_Prc/index.html
+++ b/Front-End-Prc/HTML+CSS+JS/JS_Study/JS_Prc/Airline_Prc/index.html
@@ -30,7 +30,9 @@
         <div class="date-box">
           <p>일요일, 4월 20일, 2025</p>
         </div>
-        <p class="outline">왕복 여행 가격은 수수료와 세금이 포함된 가격입니다. 추가 수하물이 있을 경우 수수료가 추가로 적용됩니다. 서비스 및 편의시설은 상기된 내용과 다를 수 있습니다.
+        <p class="outline">왕복 여행 가격은 수수료와 세금이 포함된 가격입니다.
+          추가 수하물이 있을 경우 수수료가 추가로 적용됩니다.
+          서비스 및 편의시설은 상기된 내용과 다를 수 있습니다.
         </p>
       </div>
 
