--- a/Front-End-Prc/HTML+CSS+JS/JS_Study/JS_Prc/Airline_Prc/index.html
+++ b/Front-End-Prc/HTML+CSS+JS/JS_Study/JS_Prc/Airline_Prc/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="logo-container">
         <img src="./assets/logo.png" alt="">
-        <h1>COGI Airline</h1>
+        <h1>Codeit Airline</h1>
       </div>
     </div>
   </header>
